feat(server): implement AuthServiceFacade
